syntax = "proto3";

option csharp_namespace = "CommMaster";

import "Protos/CommSharedTypes.proto";

package CommMaster;

service CommService {
  rpc Register (RegisterationRequest) returns (RegisterationResponse);
  rpc Unregister (RegisterationRequest) returns (RegisterationResponse);
  rpc MakeRequest (CommShared.Message) returns (CommShared.Message);
  rpc Notify (CommShared.Message) returns (CommShared.Message);
}

message RegisterationRequest {
  string clientId = 1;
  string type = 2;
  string name = 3;
  string address = 4;  
  map<string, string> properties = 5;
}

message RegisterationResponse {
  string clientId = 1;
  string status = 2;
  string message = 3;
}